--- a/DMSDriver/DMSDriver/Resources/Storyboards/Task.storyboard
+++ b/DMSDriver/DMSDriver/Resources/Storyboards/Task.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -347,6 +347,7 @@
                     </view>
                     <connections>
                         <outlet property="clvContent" destination="XAA-hm-bRi" id="Leg-h0-xxU"/>
+                        <outlet property="filterLabel" destination="4kb-Iw-73I" id="CEQ-Qe-PjG"/>
                         <outlet property="lblNoData" destination="uB5-PU-Rtg" id="beH-VX-Oy4"/>
                     </connections>
                 </viewController>
@@ -425,7 +426,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sh4-vC-SKt">
-                                                    <rect key="frame" x="15" y="0.0" width="345" height="92"/>
+                                                    <rect key="frame" x="15" y="0.0" width="345" height="91.5"/>
                                                     <subviews>
                                                         <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="map" translatesAutoresizingMaskIntoConstraints="NO" id="Cx0-ep-qgq">
                                                             <rect key="frame" x="0.0" y="10" width="0.0" height="0.0"/>
@@ -435,7 +436,7 @@
                                                             </constraints>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Content" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EAs-Op-DLQ">
-                                                            <rect key="frame" x="15" y="20" width="280" height="52"/>
+                                                            <rect key="frame" x="15" y="20" width="280" height="51.5"/>
                                                             <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="14"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -483,7 +484,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RjW-cM-sQN">
-                                                    <rect key="frame" x="15" y="0.0" width="345" height="92"/>
+                                                    <rect key="frame" x="15" y="0.0" width="345" height="91.5"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="255" verticalHuggingPriority="251" horizontalCompressionResistancePriority="755" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M4b-QF-y2u">
                                                             <rect key="frame" x="15" y="7" width="26" height="16"/>
@@ -492,7 +493,7 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Content" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WUx-cO-TYc">
-                                                            <rect key="frame" x="51" y="5" width="274" height="82"/>
+                                                            <rect key="frame" x="51" y="5" width="274" height="81.5"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="d9L-lO-iuM"/>
                                                             </constraints>
@@ -546,10 +547,10 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dXw-V9-t5T">
-                                                    <rect key="frame" x="15" y="10" width="345" height="92"/>
+                                                    <rect key="frame" x="15" y="10" width="345" height="91.5"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Items" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m4j-Gm-bIq">
-                                                            <rect key="frame" x="15" y="0.0" width="315" height="92"/>
+                                                            <rect key="frame" x="15" y="0.0" width="315" height="91.5"/>
                                                             <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="14"/>
                                                             <color key="textColor" red="0.035294117649999998" green="0.1529411765" blue="0.25882352939999997" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
@@ -589,10 +590,10 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v1F-5V-ybb">
-                                                    <rect key="frame" x="15" y="0.0" width="345" height="93"/>
+                                                    <rect key="frame" x="15" y="0.0" width="345" height="92.5"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Items" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sW1-cl-cy2">
-                                                            <rect key="frame" x="15" y="0.0" width="215" height="93"/>
+                                                            <rect key="frame" x="15" y="0.0" width="215" height="92.5"/>
                                                             <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="14"/>
                                                             <color key="textColor" red="0.28235294119999998" green="0.36470588240000001" blue="0.43921568630000002" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
@@ -705,6 +706,6 @@
         <image name="ic-arrowDownBlue" width="15" height="8"/>
         <image name="ic_dropdownblue" width="20" height="12"/>
         <image name="ic_time" width="11" height="11"/>
-        <image name="map" width="64" height="64"/>
+        <image name="map" width="32" height="32"/>
     </resources>
 </document>
